Chapter05/5-3-1_np_allowall.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-all
  spec:
    podSelector:
	  ingress:
	    - {}
