Chapter05/5-3-1_np_denyall.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: default-deny
  spec:
    podSelector:
